--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "autoprefixer": "^10.4.18",
     "esbuild": "^0.19.11",
     "eslint": "^8.56.0",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "globals": "^15.9.0",
