--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@mui/x-data-grid": "^6.19.3",
     "@remix-run/router": "^1.23.0",
     "@types/crypto-js": "^4.2.2",
-    "axios": "^1.9.0",
+    "axios": "^1.11.0",
     "crypto-js": "^4.2.0",
+    "firebase": "^12.0.0",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
@@ -31,7 +32,8 @@
     "react-phone-input-2": "^2.15.1",
     "react-router": "^6.30.0",
     "react-router-dom": "^6.30.0",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
